--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ configurations {
 
 dependencies {
     codeQualityConfig  group: 'com.github.mstawowiak',  name: 'code-quality',   version: '1.1.0'
+    testImplementation group: 'org.apache.commons',     name: 'commons-lang3',  version: '3.7'
     testImplementation group: 'junit',                  name: 'junit',          version: '4.12'
 }
 
