--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: "groovy"
 apply plugin: 'checkstyle'
 apply plugin: 'pmd'
 
@@ -21,8 +22,9 @@ configurations {
 
 dependencies {
     codeQualityConfig  group: 'com.github.mstawowiak',  name: 'code-quality',   version: '1.1.0'
-    testImplementation group: 'org.apache.commons',     name: 'commons-lang3',  version: '3.7'
-    testImplementation group: 'junit',                  name: 'junit',          version: '4.12'
+    testCompile        group: 'org.apache.commons',     name: 'commons-lang3',  version: '3.7'
+    testCompile        group: 'junit',                  name: 'junit',          version: '4.12'
+    testCompile        group: 'org.spockframework',     name: 'spock-core',     version: '1.1-groovy-2.4'
 }
 
 checkstyle {
